Update server execution guide and fine-tuning inference-only option
- Update 실행방법.md with latest server scripts and logging info
- Add stop_servers.sh usage instructions
- Add log file locations and monitoring commands
- Add --save_inference_only option to fine-tuning script
- Optimize model saving for inference (exclude optimizer files)
- Update fine-tuning README with inference-only option details

--- a/scripts/server/실행방법.md
+++ b/scripts/server/실행방법.md
@@ -42,11 +42,25 @@ echo "백엔드: http://localhost:8000"
 echo "프론트엔드: http://localhost:8080"
 ```
 
-### 방법 2: 실행 스크립트 사용
+### 방법 2: 실행 스크립트 사용 (권장)
 ```bash
 cd /home/keti_spark1/ald-rag-lab
-chmod +x scripts/server/run_servers.sh
 ./scripts/server/run_servers.sh
+```
+
+이 스크립트는 다음을 자동으로 수행합니다:
+1. 기존 서버 종료
+2. 백엔드 서버 시작 (백그라운드)
+3. 프론트엔드 서버 시작 (백그라운드)
+4. 서버 상태 확인
+
+**로그 확인:**
+- 백엔드 로그: `/tmp/backend.log`
+- 프론트엔드 로그: `/tmp/frontend.log`
+
+**서버 종료:**
+```bash
+./scripts/server/stop_servers.sh
 ```
 
 ---
@@ -103,7 +117,37 @@ lsof -i :8000
 lsof -i :8080
 ```
 
+### 로그 확인
+```bash
+# 백엔드 로그 실시간 확인
+tail -f /tmp/backend.log
+
+# 프론트엔드 로그 실시간 확인
+tail -f /tmp/frontend.log
+
+# 최근 로그 확인
+tail -n 50 /tmp/backend.log
+tail -n 50 /tmp/frontend.log
+```
+
+### 서버 응답 확인
+```bash
+# 백엔드 API 확인
+curl http://localhost:8000
+
+# 프론트엔드 확인
+curl http://localhost:8080
+```
+
 ### 실행 중인 서버 종료
+
+**자동 스크립트 사용 (권장):**
+```bash
+cd /home/keti_spark1/ald-rag-lab
+./scripts/server/stop_servers.sh
+```
+
+**수동 종료:**
 ```bash
 # 백엔드 종료
 killall uvicorn
@@ -122,11 +166,14 @@ kill $(lsof -t -i:8080)    # 프론트엔드
 
 ### 1. "Address already in use" 오류
 ```bash
-# 이미 실행 중인 서버 종료
+# 자동 스크립트로 기존 서버 종료 (권장)
+./scripts/server/stop_servers.sh
+
+# 또는 수동으로 종료
 killall uvicorn
 killall python3
 
-# 또는 포트 직접 확인 후 종료
+# 포트 직접 확인 후 종료
 lsof -i :8000
 lsof -i :8080
 ```
@@ -145,7 +192,9 @@ pip install -r requirements.txt  # requirements.txt가 있다면
 ### 3. 프론트엔드에서 API 연결 안 됨
 - 브라우저 개발자 도구(F12) → Console 확인
 - 백엔드가 정상 실행 중인지 확인: http://localhost:8000
+- 백엔드 로그 확인: `tail -f /tmp/backend.log`
 - 브라우저 캐시 삭제: `Ctrl + Shift + R` (하드 리프레시)
+- API 엔드포인트 확인: http://localhost:8000/docs
 
 ### 4. 네트워크 IP로 접속 안 됨
 ```bash
@@ -161,13 +210,23 @@ ifconfig | grep "inet 192"
 
 ## 📌 요약
 
-| 서버 | 포트 | 실행 명령어 | 접속 주소 |
-|------|------|-------------|-----------|
-| 백엔드 | 8000 | `uvicorn app:app --host 0.0.0.0 --port 8000` | http://localhost:8000 |
-| 프론트엔드 | 8080 | `python3 -m http.server 8080` | http://localhost:8080 |
+| 서버 | 포트 | 실행 명령어 | 접속 주소 | 로그 파일 |
+|------|------|-------------|-----------|-----------|
+| 백엔드 | 8000 | `uvicorn app:app --host 0.0.0.0 --port 8000` | http://localhost:8000 | `/tmp/backend.log` |
+| 프론트엔드 | 8080 | `python3 -m http.server 8080` | http://localhost:8080 | `/tmp/frontend.log` |
+
+**빠른 실행:**
+```bash
+# 서버 시작
+./scripts/server/run_servers.sh
+
+# 서버 종료
+./scripts/server/stop_servers.sh
+```
 
 **기억하기:**
 - 백엔드: 가상환경 필요 (`source torch-env/bin/activate`)
 - 프론트엔드: `frontend` 폴더에서 실행
 - 두 서버 모두 실행되어야 웹 UI 사용 가능
+- 백그라운드 실행 시 로그는 `/tmp/` 디렉토리에서 확인
 
